<resources>
    <string name="app_name">WiFiSensor</string>
    <string name="wifi_scan">Toggle Scanning</string>
    <string name="your_wifi">Your Sensing</string>
    <string name="sensing_of">%s\'s sensing</string>

    <string name="name_label">Name:</string>
    <string name="name_default">John Doe</string>

    <string name="semantic_pos_label">Semantic position:</string>
    <string name="semantic_pos_default">living room</string>

    <string name="pos_label">Position (x/y):</string>
    <string name="pos_default">0.0/0.0</string>

    <string name="cur_pos_label">Current position:</string>
    <string name="pos_not_found">Position not found</string>
    <string name="pos_learn_mode">Learn mode</string>


    <string name="last_contact_label">Last contact:</string>
</resources>
